[package]
name = "ddns-cf-worker"
version = "0.1.0"
edition = "2021"
authors = ["Shell Chen <me@sorz.org>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum"] }
worker-macros = { version = "0.6", features = ["http"] }
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.10", features = ["query", "typed-header"] }
tower-service = "0.3.3"
serde = "1"
log = "0.4"
console_log = "1"
wasm-bindgen-futures = "0.4"
futures = "0.3"
constant_time_eq = "0.4"
cloudflare = { git = "https://github.com/cloudflare/cloudflare-rs", tag = "v0.14.0" }
thiserror = "2"